# agent_swarm_qwen

./: .gitignore  LICENSE  README.md  deploy.sh  eval_with_qwen.py  pyproject.toml
src/: __init__.py  adaptive_orchestrator.py  agent_scheduler.py  agent_swarm.py  artifact_storage.py  context_manager.py  long_text_processor.py  main_agent.py  memory_manager.py  messaging.py  output_pipeline.py  output_registry.py  quality_assurance.py  result_aggregator.py  sub_agent.py  supervisor.py  task_board.py  task_decomposer.py  team_lifecycle.py  tool_registry.py  wave_executor.py
src/core/: __init__.py  agent_swarm.py  quality_assurance.py  task_decomposer.py
src/core/main_agent/: __init__.py  agent.py  executor.py  monitor.py  planner.py
src/core/supervisor/: __init__.py  flow.py  quality_gate.py
src/execution/: __init__.py  context_manager.py  scheduler.py  wave_executor.py
src/execution/sub_agent/: __init__.py
src/handlers/: __init__.py  code_handler.py  composite_handler.py  image_handler.py  report_handler.py  video_handler.py  website_handler.py
src/interfaces/: __init__.py  agent_scheduler.py  context_manager.py  main_agent.py  messaging.py  output_handler.py  result_aggregator.py  sub_agent.py  task_board.py  task_decomposer.py  team_lifecycle.py  tool_registry.py  wave_executor.py
src/memory/: __init__.py
src/models/: __init__.py  agent.py  agent_registry.py  context.py  enums.py  message.py  output.py  result.py  task.py  team.py  tool.py
src/output/: __init__.py
src/output/handlers/: __init__.py
src/pipeline_optimizer/: __init__.py  models.py
src/qwen/: __init__.py  dashscope_client.py  interface.py  local_client.py  models.py  retry.py
src/tools/: __init__.py  code_execution.py  code_review.py  config.py  data_analysis.py  file_operations.py  sandbox_browser.py  sandbox_code_interpreter.py
src/tools/backends/: __init__.py  aliyun_browser_tool_backend.py  aliyun_fc_code_interpreter_backend.py  restricted_python_backend.py
src/utils/: __init__.py  logging.py
tests/: test_backward_compatibility.py  test_coder_sandbox.py  test_execute_plan_integration.py  test_execute_supervisor_integration.py  test_execute_with_plan.py  test_logging.py  test_quality_gate_integration.py  test_structure.py
web/: README.md  start.sh
web/backend/: app.py  file_parser.py  models.py  requirements.txt  state.py  utils.py
web/backend/execution/: __init__.py  adaptive.py  delegate.py  helpers.py  monitor.py  planner.py  report.py  supervisor_flow.py  swarm_flow.py
web/backend/routes/: adaptive.py  agents.py  artifacts.py  config.py  files.py  meeting.py  multimodal.py  quality.py  tasks.py  websocket.py
web/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/frontend/src/: App.tsx  config.ts  index.css  types.ts
web/frontend/src/components/: AgentCard.tsx  AgentGrid.tsx  ArtifactPanel.tsx  DownloadButton.tsx  ExecutionFlow.tsx  ExecutionFlowDAG.tsx  ExecutionFlowGraph.tsx  Header.tsx  (+4 more)
(+1 files in other folders)
